Fixed Submit Form

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="https://getform.io/f/3fde0b0c-71e4-4131-884f-92d7279e85f5" method="POST">
+								<form action="https://getform.io/f/3fde0b0c-71e4-4131-884f-92d7279e85f5" method="POST">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -213,7 +213,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
+										<li><button type="submit" value="Send" class="primary" />Send</button></li>
 									</ul>
 								</form>
 							</section>
