Included logo across pages

--- a/elements.html
+++ b/elements.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title"><span class = "hr1">S</span><span class = "hr2">T</span><span class = "hr3">E</span><span class = "hr4">A</span><span class = "hr5">M</span><span class = "hr6">-D</span></span>
 								</a>
 
 							<!-- Nav -->
