--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About Us</a></li>
+							<li><a href="about.html">About Us</a></li>
 							<li><a href="generic.html">Curriculum</a></li>
 							<li><a href="generic.html">Our Team</a></li>
 							<li><a href="elements.html">Contact Us</a></li>
