Included menu items across pages

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title"><span class = "hr1">S</span><span class = "hr2">T</span><span class = "hr3">E</span><span class = "hr4">A</span><span class = "hr5">M</span><span class = "hr6">-D</span></span>
 								</a>
 
 							<!-- Nav -->
@@ -40,10 +40,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="generic.html">Curriculum</a></li>
+							<li><a href="generic.html">Our Team</a></li>
+							<li><a href="elements.html">Contact Us</a></li>
 						</ul>
 					</nav>
 
