Modified home and about pages.

--- a/about.html
+++ b/about.html
@@ -6,11 +6,15 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>About Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+		<link rel="manifest" href="images/site.webmanifest">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -41,65 +45,90 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Us</a></li>
-							<li><a href="generic.html">Curriculum</a></li>
-							<li><a href="generic.html">Our Team</a></li>
-							<li><a href="elements.html">Contact Us</a></li>
+							<li><a href="curriculum.html">Curriculum</a></li>
+							<li><a href="contact_us.html">Contact Us</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<img src="images/task.jpeg" alt="" style="float:right;"  />
+							<h1 class = "hr6">About Us</h1>
+							<p><b>We're a student-led initiative tailored towards equipping Black students in high school, particularly in majority Black schools in the Miami-Dade area, with Science, Technology, Engineering and Mathematics skills.</b> </p>
+							<p>In the past, we have individually worked on Black Excellence projects, conducted independent research projects and participated in lab research experiences. Thus we believe, it's important to create avenues for other students just like us </p>
+							<br />
+							<h2 class = "hr1">Our Inspiration</h2>
+							<p>Our individual experiences navigating spaces and opportunities in STEAM related fields has inspired us to create this initiative to guide students just like us. We believe our time here at the University of Miami has inspired us to reach students in the diaspora who are outside our school community. </p>
+
+							<h2 class = "hr2">Our Vision</h2>
+							<p>We envision a future where STEAM-D students are able to utilize their newly acquired STEAM skills to, confidently apply for and launch careers in research, engineering, art and entreprenuership. Additionally, we want to our students to be able to impart their knowldege to people in their communities.</p>
+
+							<h2 class = "hr3">Our Strategy</h2>
+							<p>We will provide resources, opportunities and leadership training geared towards student success in STEAM-related studies and careers. With the help of UM students, faculty and staff, we believe we can accomplish this goal.</p>
 						</div>
+						<br />
+						<div class="inner">
+							<h1 class = "hr6">Meet Our Team</h1>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-4"><span class="image fit"><img src="images/team/taylor.jpeg" alt="" /><br/><div class = "descriptor"> Taylor Washington</div><div class = "descriptor_sub"> Team Lead</div></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /><br/><div class = "descriptor"> Esther Alexandre </div><div class = "descriptor_sub"> Technology Lead</div></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /><br/><div class = "descriptor"> Ashlee Sealy</div><div class = "descriptor_sub"> Science Lead</div></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/team/roma.jpeg" alt="" /><br/><div class = "descriptor"> Roma Williams</div><div class = "descriptor_sub"> Mathematics Lead</div></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/team/isaac.jpeg" alt="" /><br/><div class = "descriptor"> Isaac Attuah</div><div class = "descriptor_sub"> Technology Lead</div></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/team/thilani.jpeg" alt="" /><br/><div class = "descriptor"> Thilani Samarakoon</div><div class = "descriptor_sub"> Faculty Advisor</div></span></div>
+									<!-- <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /><br/><p class = "descriptor"> Tiffany Demps</p></span></div> -->
+									
+								</div>
+						</div>
+						
+					</div>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>Get in touch</h2>
+							<form action="https://getform.io/f/3fde0b0c-71e4-4131-884f-92d7279e85f5" method="POST">
+								<div class="fields">
+									<div class="field half">
+										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<div class="field half">
+										<input type="email" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="field">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><button type="submit" value="Send" class="primary" />Send</button></li>
 								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</form>
+						</section>
+						<section>
+							<h2>Follow</h2>
+							<ul class="icons">
+								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<li><a href="https://www.instagram.com/steam_diaspora/?hl=en" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+								<li><a href="https://github.com/Steam-D/website" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li> -->
+								<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
+								<li><a href="mailto:umsteamd@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li>&copy; STEAM-D. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</footer>
 
-			</div>
+		</div>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
