Updated Curriculum Page

--- a/curriculum.html
+++ b/curriculum.html
@@ -54,10 +54,69 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Curriculum</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
+							<p>Our curriculum is built to emphasize the following topics under the major sections in STEAM: </p>
+							<table>
+								<tr>
+									<td>
+										<h2 class = "hr1">Science</h2>
+										<ul>
+											<li>Renewable Energy</li>
+											<li>Introduction to Research</li>
+											<li>Scientific Poster Proposal and Design</li>
+											<li>The Scientific Method</li>
+										</ul>
+									</td>
+									<td>
+										<h2 class = "hr2">Technology</h2>
+										<ul>
+											<li>Coding with Python</li>
+											<li>Building and Designing Websites</li>
+											<li>Introduction to Data Science</li>
+											<li>Cybersecurity</li>
+										</ul>
+									</td>
+									<td>
+										<h2 class = "hr3">Engineering</h2>
+										<ul>
+											<li>Automation with UI Path</li>
+											<li>Modelling with Sketch-Up and AutoCad</li>
+											<li>Introduction to Arduino</li>
+											<li>Environmental and Electrical Engineering Projects</li>
+										</ul>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<h2 class = "hr4">Arts</h2>
+										<ul>
+											<li>Architecture with Minecraft</li>
+											<li>Prosthetic Designing</li>
+											<li>Painting and Art</li>
+											<li>Virtual Musuem Building</li>
+										</ul>
+									</td>
+									<td>
+										<h2 class = "hr5">Mathematics</h2>
+										<ul>
+											<li>Introduction to MatLab</li>
+											<li>Introduction to Statistics</li>
+											<li>Introduction to Data Science</li>
+											<li>Mathematical Modelling</li>
+										</ul>
+									</td>
+									<td>
+										<h2 class = "hr6">Diaspora Studies</h2>
+										<ul>
+											<li>Black Innovation Challenge</li>
+											<li>Black History Month Sessions</li>
+											<li>Black Inventors & Their Contributions</li>
+											<li>Community Outreach</li>
+										</ul>
+									</td>
+								</tr>
+							</table>
+							<p><b>Our in-depth curriculum guide can be found <a href = "https://docs.google.com/document/d/1RkWFPi4sG7bkRdYhpgXmttwBc15KxmCU/edit?usp=sharing&ouid=107314854467877395096&rtpof=true&sd=true">here</a></b> </p>
 						</div>
 					</div>
 
