--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 								<p>STEAM-D runs virtual and in-person workshops for high school students, in majority Black high schools, that are designed to impart STEAM skills and help students overcome imposter syndrome. We also prepare students for various STEAM related opportunities in college and in the industry. </p>
 							</header>
 							<ul class= "actions fit">
-								<li><a href="#" class="button secondary fit">Register Your School</a></li>
+								<li><a href="https://forms.gle/UnfFk5YiL75ecauw9" class="button secondary fit">Register Your School</a></li>
 								<li><a href="#" class="button tertiary fit">Join Our Team</a></li>
-								<li><a href="#" class="button auxilliary fit">Partner With Us</a></li>
+								<li><a href="contact_us.html" class="button auxilliary fit">Partner With Us</a></li>
 							</li>
 							</ul>
 							<br>
