Updated Links and Curriculum Page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 					<div id="main">
 						<div class="inner">
 							<img src="images/task.jpeg" alt="" style="float:right;"  />
-							<h1 class = "hr6">About Us</h1>
+							<h1>About Us</h1>
 							<p><b>We're a student-led initiative tailored towards equipping Black students in high school, particularly in majority Black schools in the Miami-Dade area, with Science, Technology, Engineering and Mathematics skills.</b> </p>
 							<p>In the past, we have individually worked on Black Excellence projects, conducted independent research projects and participated in lab research experiences. Thus we believe, it's important to create avenues for other students just like us </p>
 							<br />
@@ -69,7 +69,7 @@
 						</div>
 						<br />
 						<div class="inner">
-							<h1 class = "hr6">Meet Our Team</h1>
+							<h1>Meet Our Team</h1>
 							<div class="box alt">
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/team/taylor.jpeg" alt="" /><br/><div class = "descriptor"> Taylor Washington</div><div class = "descriptor_sub"> Team Lead</div></span></div>
