--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</header>
 							<ul class= "actions fit">
 								<li><a href="https://forms.gle/UnfFk5YiL75ecauw9" class="button secondary fit">Register Your School</a></li>
-								<li><a href="#" class="button tertiary fit">Join Our Team</a></li>
+								<li><a href="contact_us.html" class="button tertiary fit">Join Our Team</a></li>
 								<li><a href="contact_us.html" class="button auxilliary fit">Partner With Us</a></li>
 							</li>
 							</ul>
