Updated Curriculum Page

--- a/curriculum.html
+++ b/curriculum.html
@@ -125,7 +125,7 @@
 									</td>
 								</tr>
 							</table>
-							<p><b>Our in-depth curriculum guide can be found <a href = "https://docs.google.com/document/d/1RkWFPi4sG7bkRdYhpgXmttwBc15KxmCU/edit?usp=sharing&ouid=107314854467877395096&rtpof=true&sd=true">here</a></b> </p>
+							<!-- <p><b>Our in-depth curriculum guide can be found <a href = "https://docs.google.com/document/d/1RkWFPi4sG7bkRdYhpgXmttwBc15KxmCU/edit?usp=sharing&ouid=107314854467877395096&rtpof=true&sd=true">here</a></b> </p> -->
 						</div>
 					</div>
 
