--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<ul class= "actions fit">
 								<li><a href="https://forms.gle/UnfFk5YiL75ecauw9" class="button secondary fit">Register Your School</a></li>
 								<li><a href="contact_us.html" class="button tertiary fit">Join Our Team</a></li>
-								<li><a href="contact_us.html" class="button auxilliary fit">Partner With Us</a></li>
+								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSec0-_WmDCW8ez10NHVpLfzqB0rT4UbIXSOivBpDXSWyp_6cg/viewform" class="button auxilliary fit">Partner With Us</a></li>
 							</li>
 							</ul>
 							<br>
