Corrected Grammar Errors

--- a/about.html
+++ b/about.html
@@ -64,14 +64,14 @@
 						<div class="inner">
 							<img src="images/task.jpeg" alt="" style="float:right;"  />
 							<h1>About Us</h1>
-							<p><b>We're a student-led initiative tailored towards equipping Black students in high school, particularly in majority Black schools in the Miami-Dade area, with Science, Technology, Engineering and Mathematics skills.</b> </p>
-							<p>In the past, we have individually worked on Black Excellence projects, conducted independent research projects and participated in lab research experiences. Thus we believe, it's important to create avenues for other students just like us </p>
+							<p><b>We are a student-led initiative tailored towards equipping Black students in high school, particularly in majority Black schools in the Miami-Dade area, with Science, Technology, Engineering, and Mathematics skills.</b> </p>
+							<p>In the past, we have individually worked on Black Excellence projects, conducted independent research projects and participated in lab research experiences. Thus, we believe, it's important to create avenues for other students just like us. </p>
 							<br />
 							<h2 class = "hr1">Our Inspiration</h2>
-							<p>Our individual experiences navigating spaces and opportunities in STEAM related fields has inspired us to create this initiative to guide students just like us. We believe our time here at the University of Miami has inspired us to reach students in the diaspora who are outside our school community. </p>
+							<p>Our individual experiences navigating spaces and opportunities in STEAM related fields have inspired us to create this initiative to guide students just like us. We believe our time here at the University of Miami has inspired us to reach students in the diaspora who are outside our school community. </p>
 
 							<h2 class = "hr2">Our Vision</h2>
-							<p>We envision a future where STEAM-D students are able to utilize their newly acquired STEAM skills to, confidently apply for and launch careers in research, engineering, art and entreprenuership. Additionally, we want to our students to be able to impart their knowldege to people in their communities.</p>
+							<p>We envision a future where STEAM-D students are able to utilize their newly acquired STEAM skills to confidently apply for and launch careers in research, engineering, art and entrepreneurship. Additionally, we want to our students to be able to impart their knowledge to people in their communities.</p>
 
 							<h2 class = "hr3">Our Strategy</h2>
 							<p>We will provide resources, opportunities and leadership training geared towards student success in STEAM-related studies and careers. With the help of UM students, faculty and staff, we believe we can accomplish this goal.</p>
