--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>A <a href = "https://president.miami.edu/inclusion/racial-justice-pilot-grant-program/index.html" class = "umiami">UMiami Racial Grant</a> Initiative focused on Science, Technology, Engineering, Arts and Math (STEAM) Education for Miami high school students in the diaspora.</h1>
-								<p>STEAM-D runs virtual and in-person workshops for high school students, in majority Black high schools, that are designed to impart STEAM skills and help students overcome imposter syndrome. We also prepare students for various STEAM related opportunities in college and in the industry. </p>
+								<h1>A <a href = "https://president.miami.edu/inclusion/racial-justice-pilot-grant-program/index.html" class = "umiami">University of Miami Racial Grant</a> Initiative focused on Science, Technology, Engineering, Arts and Math (STEAM) Education for Miami high school students in the diaspora.</h1>
+								<p>STEAM-D runs virtual and in-person workshops for a selected cohort of high school students, in majority Black high schools. These workshops are designed to impart STEAM skills and help students overcome imposter syndrome. We also prepare students for various STEAM related opportunities in college and in the industry. </p>
 							</header>
 							<ul class= "actions fit">
 								<li><a href="https://forms.gle/UnfFk5YiL75ecauw9" class="button secondary fit">Register Your School</a></li>
