--- a/curriculum.html
+++ b/curriculum.html
@@ -102,7 +102,7 @@
 											<li>Architecture with Minecraft</li>
 											<li>Prosthetic Designing</li>
 											<li>Painting and Art</li>
-											<li>Virtual Musuem Building</li>
+											<li>Virtual Museum Building</li>
 										</ul>
 									</td>
 									<td>
