Updated website header, Inciuded Curriculum button and added STEAM link

--- a/index.html
+++ b/index.html
@@ -64,26 +64,27 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>A <a href = "https://president.miami.edu/inclusion/racial-justice-pilot-grant-program/index.html" class = "umiami">University of Miami Racial Grant</a> Initiative focused on Science, Technology, Engineering, Arts and Math (STEAM) Education for Miami high school students in the diaspora.</h1>
+								<h1>A <a href = "https://president.miami.edu/inclusion/racial-justice-pilot-grant-program/index.html" class = "umiami">University of Miami Racial Grant</a> Initiative focused on Science, Technology, Engineering, Arts and Math <a href = "https://xqsuperschool.org/rethinktogether/what-is-steam-education/" class = "ice">(STEAM)</a> Education for Miami high school students in the diaspora.</h1>
 								<p>STEAM-D runs virtual and in-person workshops for a selected cohort of high school students, in majority Black high schools. These workshops are designed to impart STEAM skills and help students overcome imposter syndrome. We also prepare students for various STEAM related opportunities in college and in the industry. </p>
 							</header>
 							<ul class= "actions fit">
-								<li><a href="https://forms.gle/UnfFk5YiL75ecauw9" class="button secondary fit">Register Your School</a></li>
-								<li><a href="contact_us.html" class="button tertiary fit">Join Our Team</a></li>
-								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSec0-_WmDCW8ez10NHVpLfzqB0rT4UbIXSOivBpDXSWyp_6cg/viewform" class="button auxilliary fit">Partner With Us</a></li>
+								<li><a href="curriculum.html" class="button auxilliary fit">Curriculum</a></li>
+								<li><a href="https://forms.gle/UnfFk5YiL75ecauw9" class="button tertiary fit">Register Your School</a></li>
+								<li><a href="contact_us.html" class="button secondary fit">Partner With Us</a></li>
+								<!-- <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSec0-_WmDCW8ez10NHVpLfzqB0rT4UbIXSOivBpDXSWyp_6cg/viewform" class="button auxilliary fit">Partner With Us</a></li> -->
 							</li>
 							</ul>
 							<br>
 							<br>
 						
-							<h1> What Our Workshops Offer</h1>
+							<h1> What We Offer</h1>
 							<section class="tiles">
 								
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="curriculum.html">
 										<h2>Mentorship Sessions</h2>
 										<div class="content">
 											<p>Each student is assigned a mentor who is an expert in a chosen STEAM field. This mentor will serve as a guide and support system throughout the program.</p>
@@ -94,7 +95,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="curriculum.html">
 										<h2>Free Courses</h2>
 										<div class="content">
 											<p>Free courses and links are provided across different topics in STEAM. These courses are designed to be self-paced and interactive.</p>
@@ -105,7 +106,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="curriculum.html">
 										<h2>Leadership Training</h2>
 										<div class="content">
 											<p>This training plays a vital role to ensure students can talk about their ideas and implement them effectively during and after workshops.</p>
@@ -116,7 +117,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="curriculum.html">
 										<h2>Projects</h2>
 										<div class="content">
 											<p>Participants will get to demonstrate various projects that encapsulates what they learn in different sessions.</p>
@@ -127,7 +128,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="curriculum.html">
 										<h2>Community Outreach</h2>
 										<div class="content">
 											<p>We provide participants the tools and opportunities to reach out to communites that have very little access to STEAM education of any kind.</p>
@@ -138,7 +139,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="curriculum.html">
 										<h2>Career Sessions</h2>
 										<div class="content">
 											<p>Students will be exposed to resources and personnel across different careers in STEAM.</p>
