Removed fullstop for header

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="inner">
 							<header>
 								<h1>A <a href = "https://president.miami.edu/inclusion/racial-justice-pilot-grant-program/index.html" class = "umiami">University of Miami Racial Grant</a> Initiative:<br/></h1>
-								<h2 class = "lower">focused on Science, Technology, Engineering, Arts, and Math <a href = "https://xqsuperschool.org/rethinktogether/what-is-steam-education/" class = "ice">(STEAM)</a> Education for Miami high school students in the diaspora.</h2>
+								<h2 class = "lower">focused on Science, Technology, Engineering, Arts, and Math <a href = "https://xqsuperschool.org/rethinktogether/what-is-steam-education/" class = "ice">(STEAM)</a> Education for Miami high school students in the diaspora</h2>
 								<p>STEAM-D runs virtual and in-person workshops for a selected cohort of high school students, in majority Black high schools. These workshops are designed to impart STEAM skills and help students overcome imposter syndrome. We also prepare students for various STEAM related opportunities in college and in the industry. </p>
 							</header>
 							<ul class= "actions fit">
