Included volunteer application

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 							<ul class= "actions fit">
 								<li><a href="curriculum.html" class="button auxilliary fit">Curriculum</a></li>
 								<li><a href="https://forms.gle/DmochhYrxCDGLbS9A" class="button tertiary fit">Apply Here!</a></li>
-								<li><a href="contact_us.html" class="button secondary fit">Partner With Us</a></li>
+								<li><a href="https://forms.gle/5bB4bf2prU79F79Z6" class="button secondary fit">Volunteer Application</a></li>
+								<!-- <li><a href="contact_us.html" class="button secondary fit">Partner With Us</a></li> -->
 								<!-- <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSec0-_WmDCW8ez10NHVpLfzqB0rT4UbIXSOivBpDXSWyp_6cg/viewform" class="button auxilliary fit">Partner With Us</a></li> -->
 							</li>
 							</ul>
