--- a/curriculum.html
+++ b/curriculum.html
@@ -70,28 +70,31 @@
 									<td>
 										<h2 class = "hr1">Science</h2>
 										<ul>
-											<li>Renewable Energy</li>
-											<li>Introduction to Research</li>
-											<li>Scientific Poster Proposal and Design</li>
-											<li>The Scientific Method</li>
+											<li>Introduction to Research & Scientific Practice</li>
+											<li>Virtual Wet Lab Experience</li>
+											<li>Art of Asking Scientific Questions</li>
+											<li>Scientific Presentations and Writing</li>
+											<li>MD/PhD guest speaker</li>
+											<li>Capstone TED Talk</li>
 										</ul>
 									</td>
 									<td>
 										<h2 class = "hr2">Technology</h2>
 										<ul>
-											<li>Coding with Python</li>
-											<li>Building and Designing Websites</li>
+											<li>Introduction to Python</li>
+											<li>Introduction to Web Design</li>
 											<li>Introduction to Data Science</li>
-											<li>Cybersecurity</li>
+											<li>Introduction to Cybersecurity</li>
 										</ul>
 									</td>
 									<td>
 										<h2 class = "hr3">Engineering</h2>
 										<ul>
-											<li>Automation with UI Path</li>
-											<li>Modelling with Sketch-Up and AutoCad</li>
-											<li>Introduction to Arduino</li>
-											<li>Environmental and Electrical Engineering Projects</li>
+											<li>Introduction to Automation</li>
+											<li>Introduction to AutoCAD</li>
+											<li>Introduction to Sketch-Up</li>
+											<li>Introduction to Electrical Engineering</li>
+											<li>Environmental Engineering Case</li>
 										</ul>
 									</td>
 								</tr>
@@ -99,19 +102,20 @@
 									<td>
 										<h2 class = "hr4">Arts</h2>
 										<ul>
-											<li>Architecture with Minecraft</li>
-											<li>Prosthetic Designing</li>
-											<li>Painting and Art</li>
-											<li>Virtual Museum Building</li>
+											<li>LED Lights and Morse Code</li>
+											<li>Real-world Minecraft</li>
+											<li>The Science Comic Book</li>
+											<li>Prosthetic Design</li>
+											<li>The Art of Data</li>
 										</ul>
 									</td>
 									<td>
 										<h2 class = "hr5">Mathematics</h2>
 										<ul>
-											<li>Introduction to MatLab</li>
-											<li>Introduction to Statistics</li>
-											<li>Introduction to Data Science</li>
-											<li>Mathematical Modelling</li>
+											<li>Introduction to MatLab (Part 1 & 2)</li>
+											<li>Careers in Mathematics</li>
+											<li>NASA Challenge</li>
+											<li>Raytheon Challenge</li>
 										</ul>
 									</td>
 									<td>
