Included Course Hub

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Us</a></li>
+							<li><a href="https://flicker-eggnog-11f.notion.site/Course-Hub-cea580ef23ac4e89b601072707f14e57">Courses</a></li>
 							<li><a href="curriculum.html">Curriculum</a></li>
 							<li><a href="contact_us.html">Contact Us</a></li>
 						</ul>
